# bodn-esp32

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  diagram.json  mcp23017.chip.c  mcp23017.chip.json  mcp23017.chip.wasm  pca9685.chip.c  pca9685.chip.json  pca9685.chip.wasm  pyproject.toml  wokwi.toml
.githooks/: pre-commit
cmodules/: micropython.cmake
docs/: PERFORMANCE_GUIDELINES.md  UX_GUIDELINES.md  assets.md  audio.md  audio_assets.md  getting-started.md  hardware.md  nfc.md  protoboard_layout.md  roadmap.md  soundboard.md  story_authoring.md  wiring.md
firmware/: boot.mpy  boot.py  main.mpy  main.py  sdcard.py  st7735.py
tests/: conftest.py  test_arcade.py  test_assets.py  test_audio.py  test_battery.py  test_blippa.py  test_chord.py  test_debounce.py  test_flode_rules.py  test_font_ext.py  test_gesture.py  test_highfive_rules.py  test_hold_detector.py  test_home.py  test_i18n.py  test_input.py  test_life_rules.py  test_mcp23017.py  test_micropython_compat.py  test_mystery_rules.py  test_nfc.py  test_nfc_provision_web.py  test_ota_push.py  test_pca9685.py  test_pn532.py  test_power.py  test_qr.py  test_rakna_rules.py  test_rulefollow_rules.py  test_screen.py  test_secondary.py  test_sequencer_rules.py  test_sequencer_snap.py  test_session.py  test_simon_rules.py  test_sortera_rules.py  test_soundboard_rules.py  test_space_rules.py  test_storage.py  test_story_rules.py  (+6 more)
tools/: build-firmware.sh  build-web-ui.py  convert_audio.py  convert_icons.py  deploy.sh  ftp-sync.py  generate_cards.py  generate_story_tts.py  generate_tts.py  import_freesound.py  (+9 more)
(+198 files in other folders)
